test_regress/t/t_virtual_interface_trigger_unsup.out
%Error-UNSUPPORTED: t/t_virtual_interface_trigger_unsup.v:8:10: Unsupported: virtual interface trigger on 'string' type
                                                              : ... note: In instance 't.sif'
    8 |   string s;
      |          ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
